Fix contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ nav #breadcrumb [aria-current="page"] {
   min-width: 100%;
 }
 #restaurants-list li h2 {
-  color: #e17900;
+  color: #b56000;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
